Change Log for OpenXava project
===============================

- Fix: Wrong OpenXava base directory (the .openxava folder) path in some UNIX systems running as root user.  
- Fix: If one property is used in more than one @Calculation only the first @Calculation property works.
- Article about dashboard creation available in the documentation with video.
- Fix: Using a view of the parent entity that is not present in the module entity breaks the module.
- Fix: Permits data entry enabling attackers to read arbitrary files via =WEBSERVICE calls in LibreOffice.
- Fix: Lots of SQL queries for recalculating property values on change-dependent properties in some cases.
- Fix: Collection total recalculated many times if depends on a property of main view with two collections.
  
OpenXava 7.4.3 (2024-11-15)
---------------------------
- List header labels are multiline with resizeColumns=true varying the number of lines as the width changes. 
- Invoicing archetypes include an initial database populated with sample data.
- HSQLDB upgraded to 2.7.4.
- Hibernate Validator upgraded to 6.2.5.
- Groovy upgraded to 4.0.24.
- Embedded Tomcat used in development upgraded to 9.0.97.
- Driver version in doc/new projects upgraded for Oracle.
- Article in documentation about how to use project templates or archetypes.
- Lesson 7 of the reporting course with JasperReports available in the documentation with video.
- 'How to install' documentation improved to cover some tips to work with Mac.
- Fixed 1 security vulnerability in dependencies, now we have 0 vulnerabilities.
- Fix: Drag & drop in the tree does not move the element to the correct place and removes nodes.
- Fix: If an exception is produced by the getter of a calculated collection the module breaks.
- Fix: Third level properties in baseCondition but not in list for @Tab fails for certain properties names.
- Fix: Modules don't start in production Tomcat with some Linux and JDKs with a javax.swing.KeyStroke error.